<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.groceryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.groceryapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.groceryapp.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.groceryapp.Fragments.OffersFragment"
        android:label="@string/Offer"
        tools:layout="@layout/fragment_offiers" />
    <fragment
        android:id="@+id/nav_new_product"
        android:name="com.example.groceryapp.Fragments.NewProductFragment"
        android:label="@string/new_product"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.groceryapp.Fragments.MyOrdersFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.example.groceryapp.Fragments.MyCartFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_cart" />
</navigation>